--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,11 @@
 Package: myFirstRPackage
 Title: First R Package
-Version: 0.0.0.9000
-Authors@R: 
-    person(given = "Ahmed",
-           family = "Nwayyir",
-           role = c("aut", "cre"),
-           email = "nwayyir.ahmed@gmail.com")
-Description: Experimental package to learn how to create packages in R and upload them to github.
-	     It contains an implementation of Euclidean & Dijkstra algorithms.
-License: MIT License
-Encoding: UTF-8
-LazyData: true
+Version: 0.1
+Authors@R: person(given = "Ahmed", family = "Nwayyir", role = c("aut", "cre"), email = "nwayyir.ahmed@gmail.com")
+Description: Experimental package to learn how to create packages in R and upload them to github. It contains an implementation of Euclidean & Dijkstra algorithms.
+License: MIT + file LICENSE
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
+LazyData: true
+Encoding: UTF-8
 Suggests: testthat
